Fixing language switcher rendering issue on iOS and OSX. Fix #20

--- a/src/elements/land-registry/language-switcher/style.scss
+++ b/src/elements/land-registry/language-switcher/style.scss
@@ -68,6 +68,7 @@
   color: $link-colour;
   cursor: pointer;
   line-height: inherit;
+  margin: 0;
 
   &:active {
     color: $link-active-colour
